[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/sound_main.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/UI/settings/set_sound_off.png" type="Texture" id=2]
[ext_resource path="res://Assets/sprites/UI/settings/set_sound.png" type="Texture" id=3]

[node name="sound_main" type="Node2D"]
position = Vector2( 334.829, 588.538 )
z_index = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="set_on_off" type="TextureButton" parent="."]
margin_left = -98.9618
margin_top = -95.6741
margin_right = 168.038
margin_bottom = 171.326
rect_scale = Vector2( 0.760495, 0.760495 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="toggled" from="set_on_off" to="." method="_on_set_on_off_toggled"]
